--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^1.2.2
   intl: ^0.20.1
+  flutter_spinkit: ^5.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
